# PMA-RAG

./: .env.example  .gitignore  chainlit.md  config.py  docker-compose.yml  main.py  pyproject.toml  run.py
.chainlit/: config.toml
docs/: api-documentation-v2.md  api-documentation.md
evals/: run_evals.py  test_evals.py
evals/datasets/: intent_classification.json  rag_end_to_end.json
scripts/: chainlit_postgres_schema.sql  init_chainlit_db.py  reset_all.py  setup_langsmith.py
src/api/: app.py  dependencies.py  schemas.py
src/api/routers/: chat.py  conversations.py  documents.py  projects.py
src/db/: chat_store.py  metadata.py  postgres.py
src/generation/: confidence.py  prompts.py
src/generation/prompt_templates/: casual_greeting.txt  casual_thanks_bye.txt  help_response.txt  intent_classify.txt  rag_human.txt  rag_summary_human.txt  rag_summary_system.txt  rag_system.txt  reformulate.txt  triage.txt  unified_human.txt  unified_system.txt
src/graph/: builder.py  chainlit_nodes.py  decompose.py  edges.py  intent.py  nodes.py  project_context.py  state.py  validation.py
src/ingestion/: chunker.py  enrichment.py  loaders.py  pipeline.py  structure.py
src/retrieval/: bm25.py  hybrid.py  reranker.py  vectorstore.py
tests/: conftest.py  test_projects_api.py
